# reversi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: game.h  gameman.cpp
include/nana/: config.hpp
src/: board.cpp  engi.cpp  engi.h  game.h  gameman.cpp  main.cpp  main.rc  main_window.cpp  mctse.cpp  mctse.h  mtcse.cpp  mtcse.h  reversi_widgets.cpp  reversi_widgets.h  test_board.cpp
